Updated required dependencies.
git-svn-id: svn://localhost/standaloneuploader/trunk@9 108ff9f6-5af2-5e41-89d4-05bfe6cac289

--- a/StandaloneUploader/StandaloneUploader.csproj
+++ b/StandaloneUploader/StandaloneUploader.csproj
@@ -151,6 +151,12 @@
     <Compile Include="..\..\..\..\..\..\..\Francois\Dev\VSprojects\SharedClasses\UploadingProtocolTypesEnum.cs">
       <Link>UploadingProtocolTypesEnum.cs</Link>
     </Compile>
+    <Compile Include="..\..\SharedClasses\AppTypeIndependant.cs">
+      <Link>AppTypeIndependant.cs</Link>
+    </Compile>
+    <Compile Include="..\..\SharedClasses\ReflectionInterop.cs">
+      <Link>ReflectionInterop.cs</Link>
+    </Compile>
     <Compile Include="..\..\SharedClasses\UserMessages.cs">
       <Link>UserMessages.cs</Link>
       <SubType>Form</SubType>
