git-svn-id: svn://localhost/standaloneuploader/trunk@10 108ff9f6-5af2-5e41-89d4-05bfe6cac289

--- a/StandaloneUploader/StandaloneUploader.csproj
+++ b/StandaloneUploader/StandaloneUploader.csproj
@@ -168,6 +168,9 @@
     <Compile Include="..\..\SharedClasses\WebInterop.cs">
       <Link>WebInterop.cs</Link>
     </Compile>
+    <Compile Include="..\..\SharedClasses\Win32Api.cs">
+      <Link>Win32Api.cs</Link>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
